# pygraph

./: README.md  pyproject.toml
src/pygraph/: pygraph.py
